[gd_scene load_steps=6 format=3 uid="uid://cm4pfwfr4jf76"]

[ext_resource type="Script" path="res://block.gd" id="1_h8p7e"]
[ext_resource type="Theme" uid="uid://bknvks6tyqehs" path="res://assets/themes/ui_theme.tres" id="1_je5tc"]
[ext_resource type="Texture2D" uid="uid://ck87eow1vh3ac" path="res://assets/sprites/bones.png" id="3_ur1o2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fndp"]
size = Vector2(108, 108)

[sub_resource type="Curve" id="Curve_jy4l6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Block" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_right = 110.0
offset_bottom = 108.0
script = ExtResource("1_h8p7e")
colors = Array[Color]([Color(1, 0, 0, 1), Color(1, 0.501961, 0, 1), Color(1, 1, 0, 1), Color(0, 1, 0, 1), Color(0, 0, 1, 1), Color(0.477252, 0.000185159, 0.486514, 1), Color(1, 0, 1, 1)])

[node name="Visuals" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Visuals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.919841, 0.638749, 0.598958, 1)

[node name="HealthLabel" type="Label" parent="Visuals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_je5tc")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(54, 54)
shape = SubResource("RectangleShape2D_7fndp")

[node name="Particles" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(54, 54)
emitting = false
amount = 24
lifetime = 0.6
one_shot = true
explosiveness = 1.0
texture = ExtResource("3_ur1o2")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 256.0
initial_velocity_max = 512.0
scale_amount_curve = SubResource("Curve_jy4l6")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="finished" from="Particles" to="." method="_on_particles_finished"]
